# RustCryptum

./: crimson.js  package.json  svelte.config.js  tags  tailwind.config.js  tealLightning.js  vite.config.ts
.github/workflows/: build.yml
src/: app.html  app.postcss  theme.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  password.rs
src-tauri/src/models/: kdbx_keys.rs  key.rs  mod.rs
src-tauri/src/repository/: mod.rs
src-tauri/src/utils/: mod.rs
src/lib/: Greet.svelte  utils.ts
src/lib/Forms/: AddNewFolder.svelte  AddNewKey.svelte  CreateDatabase.svelte  ImportDatabase.svelte  PasswordOptions.svelte
src/lib/TopBar/: TopBar.svelte
src/lib/Ui/: Card.svelte  Loader.svelte  MainAvatar.svelte  NodeTreeViewChild.svelte  NoneElement.svelte  Placeholder.svelte  SmallCard.svelte  UlViewChild.svelte  breadcrumb.svelte
src/lib/Ui/Button/: BackButton.svelte  Button.svelte  ThemeSwitcher.svelte
src/lib/Ui/Logo/: Logo.svelte
src/lib/Ui/Title/: Title.svelte
src/lib/mainLayout/: CardBody.svelte  MainLayout.svelte
src/lib/sidebar/: Addkey.svelte  SidebarLeft.svelte
src/lib/stores/: sharedStore.ts  stateStore.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(init)/: +layout.svelte
src/routes/(init)/card/[slug]/: +page.svelte
src/routes/(init)/home/: +page.svelte
src/routes/(init)/settings/: +page.svelte
src/routes/(other)/: +page.svelte
src/routes/(other)/create/: +page.svelte
src/routes/(other)/lock/: +page.svelte
src/routes/(other)/shutdown/: +page.svelte
(+2 files in other folders)
