[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version="1.0.164", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "dialog-all", "clipboard-all", "fs-all", "path-all"] }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono", "serde_json", "uuid"] }
dirs = "5.0.1"
passwords = "3.1.13"
chrono = { version="0.4.26", features = ["serde"] }
uuid = {version = "1.3.3", features = ["serde", "v4"] }
ron = "0.8.0"
anyhow = "1.0.71"
tokio-stream = "0.1.14"
kdbx-rs = "0.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
